WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
49569
REGRESSION(
r71934
): Removing an element with a shadow DOM from under a cursor causes a crash.
https://bugs.webkit.org/show_bug.cgi?id=49569
Summary
REGRESSION(r71934): Removing an element with a shadow DOM from under a cursor...
Dimitri Glazkov (Google)
Reported
2010-11-15 15:55:31 PST
REGRESSION(
r71934
): Removing an element with a shadow DOM from under a cursor causes a crash.
Attachments
Patch
(4.10 KB, patch)
2010-11-15 15:58 PST
,
Dimitri Glazkov (Google)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dimitri Glazkov (Google)
Comment 1
2010-11-15 15:58:00 PST
Created
attachment 73941
[details]
Patch
Dimitri Glazkov (Google)
Comment 2
2010-11-15 15:59:50 PST
Darin, this is a mirror change to that in ShadowElement.h (
http://trac.webkit.org/changeset/71934/trunk/WebCore/rendering/ShadowElement.h
). I should've been more careful in reviewing all instances of where this pattern is used. Missed one.
Dimitri Glazkov (Google)
Comment 3
2010-11-15 18:39:40 PST
Comment on
attachment 73941
[details]
Patch Let's see if the monkeybot can land it.
WebKit Commit Bot
Comment 4
2010-11-15 21:35:57 PST
Comment on
attachment 73941
[details]
Patch Clearing flags on attachment: 73941 Committed
r72062
: <
http://trac.webkit.org/changeset/72062
>
WebKit Commit Bot
Comment 5
2010-11-15 21:36:04 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug