2010-11-15  Dimitri Glazkov  <dglazkov@chromium.org>

Reviewed by Darin Adler.

        REGRESSION(r71934): Removing an element with a shadow DOM from under a cursor causes a crash.
        https://bugs.webkit.org/show_bug.cgi?id=49569

        * fast/events/remove-shadow-host-crash-expected.txt: Added.
        * fast/events/remove-shadow-host-crash.html: Added.
2010-11-15  Dimitri Glazkov  <dglazkov@chromium.org>

        Reviewed by Darin Adler.

        REGRESSION(r71934): Removing an element with a shadow DOM from under a cursor causes a crash.
        https://bugs.webkit.org/show_bug.cgi?id=49569

        Test: fast/events/remove-shadow-host-crash.html

        * rendering/TextControlInnerElements.h:
        (WebCore::TextControlInnerElement::isShadowNode):
        (WebCore::TextControlInnerElement::shadowParentNode):

Canonical link: https://commits.webkit.org/62530@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@72062 268f45cc-cd09-0410-ab3c-d52691b4dbfc