WebCore/rendering/TextControlInnerElements.h
@@ -47,12 +47,12 @@ protected:
 
 private:
     virtual bool isMouseFocusable() const { return false; } 
-    virtual bool isShadowNode() const { return m_shadowParent; }
-    virtual ContainerNode* shadowParentNode() { return m_shadowParent; }
+    virtual bool isShadowNode() const { return m_shadowParent.get(); }
+    virtual ContainerNode* shadowParentNode() { return m_shadowParent.get(); }
     virtual bool isSpellCheckingEnabled() const;
     void setShadowParentNode(HTMLElement* shadowParent) { m_shadowParent = shadowParent; }
 
-    HTMLElement* m_shadowParent;
+    RefPtr<HTMLElement> m_shadowParent;
 };
 
 class TextControlInnerTextElement : public TextControlInnerElement {
